UI 선택지 추가

--- a/Server/lib/Web/views/kkutu.pug
+++ b/Server/lib/Web/views/kkutu.pug
@@ -647,7 +647,7 @@ block Middle
 					p Copyright &copy; 2021~ Morem.ME
 			
 	div(style="width: 100%;display: flex;height: 680px;")
-		div.lowreshidden(style="width:160px;height:600px;/*background-image: url(/img/ad/placeholder-l.png);*/")
+		div.lowreshidden(style="width:160px;height:600px;/*background-image: url('/img/ad/섭종전 마지막 발악.png');*/")
 			ins.adsbygoogle(style="display:inline-block;width:160px;height:600px", data-ad-client="ca-pub-3808496003691786", data-ad-slot="5307706929")
 
 		div(style="width: 1290px")
@@ -773,7 +773,7 @@ block Middle
 					+FA('paper-plane')
 					
 
-		div.lowreshidden(style="width:160px;height:600px;/*background-image: url(/img/ad/placeholder-r.png);*/")
+		div.lowreshidden(style="width:160px;height:600px;/*background-image: url('/img/ad/섭종전 마지막 발악.png');*/")
 			ins.adsbygoogle(style="display:inline-block;width:160px;height:600px", data-ad-client="ca-pub-3808496003691786", data-ad-slot="3446996199")
 
 	script (adsbygoogle = window.adsbygoogle || []).push({});
