--- a/Server/lib/Web/views/legacy/kkutu.pug
+++ b/Server/lib/Web/views/legacy/kkutu.pug
@@ -341,7 +341,7 @@ block Middle
 			button#purchase-no= L('NO')
 			button#purchase-ok= L('OK')
 	+Dialog('ReplayDiag', 300, 350, L('replay'))
-		p= "신규 리플레이 파일 (.replay)는 신규 클라이언트에서만 재생할 수 있습니다."
+		p= "신규 리플레이 파일 (.replay)는 모던 UI에서만 재생할 수 있습니다."
 		input#replay-file(type='file', style='width: 288px;', accept=".kkt")
 		div.dialog-bar
 			h4= L('replayDate')
