--- a/Server/lib/Web/views/legacy/layout.pug
+++ b/Server/lib/Web/views/legacy/layout.pug
@@ -69,6 +69,6 @@ html
 					a(href='?')!= L('AS_MOBILE')
 				br
 				a.bottom-contact(href='https://morem.me', target='_blank')!= "About Morem.ME"
-				a.bottom-contact(href='mailto:support@kkutu.cc', target='_blank')!= "Contact support@kkutu.cc"
+				a.bottom-contact(href='mailto:support@kkutu.plus', target='_blank')!= "Contact support@kkutu.plus"
 			div.bottom-legal!= L('GPL')
 			+separator(10)
