클래식 UI 기능 추가

--- a/Server/lib/Web/views/legacy/kkutu.pug
+++ b/Server/lib/Web/views/legacy/kkutu.pug
@@ -68,6 +68,13 @@ block Jungle
 block Middle
 	- var VERSION = L('version');
 	- var nick = SESSION.profile ? (SESSION.profile.title || SESSION.profile.name) : null;
+	div#evtpopup(style="display: none;position: absolute;height: 605px;width: 1010px;align-items: center;justify-content: center;align-content: center;z-index: 3;background-color: rgba(0, 0, 0, 0.6);")
+		div(style='text-align: center;font-size: 18px;')
+			a(href="https://discord.gg/5b8kNZJawd", target="_blank")
+				img(src="/img/event/디스코드100명.webp", style="height: 300px;")
+			div.dialog-bar.d2-bar.tail-button
+				button.primaryBtn#evtpopup-ok= L("close")
+
 	div#Intro
 		img#intro(src='/img/kkutu/intro.png')
 		// img#intro-start(src='/img/kkutu/intro_start.gif')
@@ -92,11 +99,30 @@ block Middle
 		button#ReplayBtn.for-lobby(style='display: none; background-color: #D9FF82;')!= L('replay')
 		button#LeaderboardBtn.for-lobby(style='display: none; background-color: #FFADD3;')!= L('leaderboard')
 		//div#facebook-menu.fb-like.for-lobby.for-master.for-normal.for-gaming(data-href='http://kkutu.kr', data-width='300', data-layout='button_count', data-action='like', data-show-faces='true', data-share='true')
-	+Dialog('SettingDiag', 300, 240, L('settingsText'))
+	+Dialog('SettingDiag', 300, 340, L('settingsText'))
 		div.dialog-bar
 			h4= L('mute')
 			+SettingOption('mute-bgm', L('bgm'))
 			+SettingOption('mute-effect', L('effect'))
+		div.dialog-bar
+			h4.opt!= L("font")
+			select#fontSelect
+				option(value="Pretendard")!= L("font_pretendard")
+				option(value="NanumBarunGothic")!= L("font_nanum")
+				option(value="Galmuri14")!= L("font_galmuri14")
+				option(value="Galmuri11")!= L("font_galmuri11")
+				option(value="Galmuri9")!= L("font_galmuri9")
+				option(value="Galmuri7")!= L("font_galmuri7")
+				option(value="D2Coding")!= L("font_d2coding")
+				option(value=L("font_mgothic"))!= L("font_mgothic")
+				option(value=L("font_gulim"))!= L("font_gulim")
+				option(value=L("font_dotum"))!= L("font_dotum")
+		div.dialog-bar
+			h4.opt!= "BGM URL"
+			input#bgm-override(type='input', placeholder=L('overrideUrl'), maxlength=200)
+		div.dialog-bar
+			h4.opt!= "로딩 URL"
+			input#img-override(type='input', placeholder=L('overrideImgUrl'), maxlength=200)
 		div.dialog-bar
 			h4= L('denyReq')
 			+SettingOption('deny-invite', L('denyInvite'))
@@ -165,7 +191,7 @@ block Middle
 			input#room-pw(type='password', placeholder=L('password'), maxlength=20)
 		div.dialog-bar
 			h4= L('userLimit')
-			input#room-limit(type='number', min=2, max=8, step=1, value=8)
+			input#room-limit(type='number', min=2, max=25, step=1, value=25)
 		div.dialog-bar
 			h4= L('gameMode')
 			select#room-mode
@@ -173,12 +199,15 @@ block Middle
 					option(value=3)!= L('modeKSH')
 					option(value=2)!= L('modeKKT')
 					option(value=8)!= L('modeKAP')
-					option(value=6)!= L('modeKTY')
 					option(value=10)!= L('modeKDA')
 					option(value=5)!= L('modeKCW')
+					option(value=6)!= L('modeKTY')
 					option(value=12)!= L('modeKSS')
 					option(value=4)!= L('modeCSQ')
 					option(value=9)!= L('modeHUN')
+				optgroup(label=L("mcTest"))
+					option(value=14)!= L('modeKJH')
+					option(value=15)!= L('modeKMQ')
 				optgroup(label=L('mcEnglish'))
 					option(value=1)!= L('modeESH')
 					option(value=0)!= L('modeEKT')
@@ -194,6 +223,8 @@ block Middle
 		div.dialog-bar
 			h4= L('roundTime')
 			select#room-time
+				option(value=3, style='color: #00FF00')
+				option(value=5, style='color: #50BCDF')
 				option(value=10, style='color: #FF4444')
 				option(value=30)
 				option(value=60, selected)
@@ -353,14 +384,17 @@ block Middle
 			h4.dialog-bar-value#replay-players -
 		div.dialog-bar.tail-button
 			button#replay-view= L('replayView')
-	+Dialog('DressDiag', 600, 280, L('dress'))
+	+Dialog('DressDiag', 640, 310, L('dress'))
+		div.dialog-bar
+			h4(style='width: 150px;')!= L('myNickname')
+			input#dress-nickname(type='textfield', placeholder=L('myNicknameX'), style='width: 435px;', maxlength=12)
 		div.dialog-bar
 			h4(style='width: 150px;')!= L('myExordial')
 			input#dress-exordial(type='textfield', placeholder=L('myExordialX'), style='width: 435px;', maxlength=100)
 		div.dialog-bar(style='width: 150px;')
 			div.moremi#dress-view(style='float: left; width: 150px; height: 150px;')
 			h4(style='width: 100%; font-weight: bold;')!= L('myMoremi')
-		div.dialog-bar(style='padding: 5px; width: 440px;')
+		div.dialog-bar(style='padding: 5px; width: 480px;')
 			div(style='border-bottom: 1px solid #CCCCCC; height: 20px;')
 				- for(var i in locals.CATEGORIES)
 					- var v = locals.GROUPS[locals.CATEGORIES[i]] || [];
@@ -369,7 +403,33 @@ block Middle
 		div.dialog-bar.tail-button
 			button#dress-ok= L('OK')
 			button#dress-cf= L('charFactory')
+			button#CouponBtn= L('coupon')
 			button(onclick=`alert("${L("paybackHelp")}");`)!= L('payback')
+			a(href="https://cafe.naver.com/pluskkutu/119", target="_blank")
+				button#shop-prob(style="width:120px;")= L('gachaProb')
+
+	+Dialog('CouponRegisterDiag', 400, 210, L("coupon"))
+		iframe#coupon-board(width=400, height=180)
+
+	+Dialog('NewbieDiag', 390, 205, L("getStarted"), true)
+		div(style="font-size: 16px; text-align: center;")
+			p
+				| 처음 만나는 것 같네요? 먼저
+				strong 닉네임을 설정
+				| 하고,
+				br
+				strong 방 만들기
+				| 를 통해 방을 만들어 첫 판을 플레이 해 보세요!
+				br
+				br
+				| 아참, 
+				strong 디스코드나 카페
+				| 에서 게임 정보를 받아볼 수 있어요.
+				br
+				br
+				small 계속하시면 Morem.ME의 개인정보처리방침 및 이용약관에 동의합니다.
+		div.dialog-bar.d2-bar.tail-button
+			button.primaryBtn#setNickname(style="width:150px;")!= L("acceptContinue")
 	+Dialog('CharFactoryDiag', 500, 410, L('charFactory'))
 		div.dialog-bar(style='width: 300px;')
 			div#cf-tray
@@ -382,6 +442,7 @@ block Middle
 		div.dialog-bar
 			div#cf-goods.goods-box
 		div.dialog-bar.tail-button
+			button#cf-reset= L('cfReset')
 			button#cf-compose= L('cfCompose')
 	+Dialog('ChatLogDiag', 350, 500, L('chatLog'))
 		div#chat-log-board(style='height: 475px; font-size: 11px; overflow-y: scroll;')
@@ -453,7 +514,7 @@ block Middle
 		div.bar-text.my-gauge-text
 	+Product('Chat')
 		div#Chat
-		input#Talk(maxlength=200)
+		input#Talk(maxlength=200, placeholder=L('chatHotkey'), autocomplete="off")
 		button#ChatBtn= L('send')
 	+Product('AD')
 		ins.adsbygoogle(style="display:inline-block;width:1000px;height:90px", data-ad-client="ca-pub-3808496003691786", data-ad-slot="5826947604")
@@ -462,3 +523,4 @@ block Bottom
 	div.bottom-legal!= L('dictionarySupport')
 	div.bottom-legal!= L('etcSupport')
 	script (adsbygoogle = window.adsbygoogle || []).push({});
+	script(type='text/javascript', src='/js/persistantCookie.js')
