--- a/Server/lib/Web/views/legacy/layout.pug
+++ b/Server/lib/Web/views/legacy/layout.pug
@@ -47,7 +47,7 @@ html
 		block CSS
 		block JS
 
-	body(style='min-width: 640px;')
+	body(style="font-family: 'Pretendard', sans-serif!important;")
 		div#Top
 			+Menu()
 			div#global-notice
