--- a/neofront/static/css/old_in_legacy_kkutu.css
+++ b/neofront/static/css/old_in_legacy_kkutu.css
@@ -261,10 +261,10 @@ iframe{
 		margin: 3px;
 		width: 364px;
 		height: 64px;
-		box-shadow: 0px 1px 1px #777777;
 		cursor: pointer;
 		background-color: #E4E4E4;
 		transition: all 300ms ease;
+		box-shadow: 0px 1px 1px #777777;
 	}
 		.rooms-create{ background-color: #8EC0F3; }
 		.rooms-create>div{ float: none; padding: 20px 0px; text-align: center; font-size: 15px; font-weight: bold; }
@@ -274,10 +274,10 @@ iframe{
 			.channel-2{ background-color: #FF7; }
 			.channel-3{ background-color: #7C7; }
 			.channel-4{ background-color: #99F; }
-		.rooms-gaming{ background-color: #FFBBBB; }
+		.rooms-gaming{ background-color: #9D9D9C; }
 			.rooms-gaming .rooms-number{ border-color: #CC9999; }
 		.rooms-item:hover{ background-color: #F4F4F4; }
-			.rooms-gaming:hover{ background-color: #FFCCCC; }
+			.rooms-gaming:hover{ background-color: #9D9D9C; }
 			.rooms-create:hover{ background-color: #AADDFF; }
 		.rooms-number{ padding-top: 18px; border-right: 1px solid #CCCCCC; margin-right: 4px; width: 49px; height: 46px; font-size: 24px; }
 		.rooms-title{ padding-top: 4px; width: 270px; height: 20px; font-size: 16px; font-weight: bold; }
@@ -338,14 +338,14 @@ iframe{
 		padding: 3px;
 		border-radius: 10px;
 		margin: 3px;
-		width: 224px;
+		width: 220px;
 		height: 151px;
 		box-shadow: 0px 1px 1px #777777;
 		background-color: #E4E4E4;
 	}
 		.room-user div{ float: left; }
 		.room-user-image{ margin: 3px; width: 100px; height: 100px; }
-		.room-user-stat{ padding: 3px; width: 112px; height: 100px; font-size: 15px; }
+		.room-user-stat{ padding: 3px; width: 108px; height: 100px; font-size: 15px; }
 			.room-user-stat div{ margin-bottom: 4px; }
 			.room-user-ready{ width: 100%; text-align: right; font-weight: bold; }
 				.room-user-readied{ color: #3A8BDF; }
@@ -605,7 +605,8 @@ iframe{
 	.game-body{
 		margin: 0px -1px;
 		width: 992px;
-		height: 180px;
+		height: 190px;
+		overflow-y: auto;
 	}
 	.cw.game-body{ position: relative; top: -378px; left: 660px; width: 334px; }
 		.game-user{
@@ -925,4 +926,10 @@ iframe{
 	0%		{ margin-top: -80px; font-size: 24px; opacity: 1; }
 	10%		{ margin-top: -95px; font-size: 36px; opacity: 0.95; }
 	100%	{ margin-top: -25px; font-size: 20px; opacity: 0.1; }
+}
+
+/* 플끄 커스텀 */
+.room-users{
+	height: 340px;
+    overflow-y: auto;
 }
