--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -601,10 +601,10 @@ block Middle
 		div.game-body
 		div.game-input
 			input#game-input(placeholder=L('yourTurn')+' '+L('inputHere'))
-	+Product('Chat')
-		div#Chat
-		input#Talk(maxlength=200, placeholder=L('chatHotkey'), autocomplete="off")
-		button#ChatBtn
+	+Product('P4jrKHDWS3x3')
+		div#aBzxRsN4KgtR
+		input#tPDaArKj3B8Y(maxlength=200, placeholder=L('chatHotkey'), autocomplete="off")
+		button#aBzxRsN4KgtR
 			+FA('paper-plane')
 	div#ad
 
