--- a/neofront/static/css/old_in_game_kkutu_shop.css
+++ b/neofront/static/css/old_in_game_kkutu_shop.css
@@ -35,7 +35,7 @@
 		border: 1px solid #AAAAAA;
 		border-radius: 5px;
 		margin-right: 3px;
-		width: 50px;
+		min-width: 50px;
 		font-size: 11px;
 		text-align: center;
 		cursor: pointer;
