--- a/Server/lib/Web/views/legacy/kkutu.pug
+++ b/Server/lib/Web/views/legacy/kkutu.pug
@@ -209,6 +209,7 @@ block Middle
 					option(value=9)!= L('modeHUN')
 				optgroup(label=L("mcTest"))
 					option(value=14)!= L('modeKJH')
+					option(value=16)!= L('modeKMT')
 					option(value=15)!= L('modeKMQ')
 				optgroup(label=L('mcEnglish'))
 					option(value=1)!= L('modeESH')
