--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -270,6 +270,7 @@ block Middle
 					option(value=14)!= L('modeKJH')
 					option(value=16)!= L('modeKMT')
 					option(value=15)!= L('modeKMQ')
+					option(value=17)!= L('modeKOK')
 				optgroup(label=L('mcEnglish'))
 					option(value=1)!= L('modeESH')
 					option(value=0)!= L('modeEKT')
