--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -1142,6 +1142,12 @@ iframe{
 .GameBox{
 	width: 100%!important;height: 680px;
 }
+.SamiBox{
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    height: 30px;
+}
 	.GameBox .product-title{ display: none; }
 	.GameBox .product-title h5{ float: left; font-size:20px; }
 	.GameBox div{ float: left; }
