--- a/Server/lib/Web/views/legacy/kkutu.pug
+++ b/Server/lib/Web/views/legacy/kkutu.pug
@@ -74,7 +74,7 @@ block Middle
 				img(src="/img/event/익숙한것이무섭다.webp", style="height: 300px;")
 			div.dialog-bar.d2-bar.tail-button
 				button.primaryBtn#evtpopup-ok= L("close")
-	div#originOverlay(style="display: none;position: absolute;margin-top: 70px;height: 200px;width: 1010px;align-items: flex-end;justify-content: center;z-index: 3;")
+	div#originOverlay(style="display: none;position: absolute;margin-top: 170px;max-height: 200px;width: 1010px;align-items: flex-end;justify-content: center;z-index: 3;")
 		img#originCountdown(src="/img/kkutu/origin_kkt/count-3.png", style="height: 100px;")
 		img#originItem(src="/img/kkutu/origin_kkt/perfect@ko.png", style="height: 60px;")
 	div#Intro
