웹팩 테스트 및 에셋 조회 기능 추가

--- a/neofront/static/css/old_in_legacy_kkutu.css
+++ b/neofront/static/css/old_in_legacy_kkutu.css
@@ -137,6 +137,9 @@ iframe{
 	width: 98px;
 	height: 20px;
 }
+	.kkutu-menu button fa{
+		margin-right: 7px;
+	}
 	.kkutu-menu button:hover{
 		margin-top: -5px;
 		height: 25px;
