--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -95,8 +95,8 @@ block Middle
 	div#tost_message
 	div#evtpopup(style="margin-top: -40px;display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 3;background-color: rgba(0, 0, 0, 0.6);")
 		div(style='text-align: center;font-size: 18px;')
-			a(target="_blank")
-				img(src="/img/event/익숙한것이무섭다.webp", style="width: 90vw;")
+			a(href="https://discord.gg/bt25WdwzR7", target="_blank")
+				img(src="/img/event/디코이벤트.webp", style="width: 90vw;")
 			div.dialog-bar.d2-bar.tail-button
 				button.primaryBtn#evtpopup-ok= L("close")
 	div#creditpopup(style="display: none;position: absolute;height: 100%;width: 100%;align-items: center;justify-content: center;align-content: center;z-index: 2;background-color:#000;")
@@ -212,8 +212,6 @@ block Middle
 	+Dialog('CommunityDiag', 300, 330)
 		div.dialog-bar(style='height: 225px; overflow-y: scroll;')
 			div#comm-friends
-		div.dialog-bar.tail-button
-			button#comm-friend-add= L('friendAdd')
 	+Dialog('LeaderboardDiag', 300, 450, L('leaderboard'))
 		div.dialog-bar(style='height: 350px;'): table#ranking(style='text-align: center;')
 			thead(style='font-weight: bold; background-color: #DDDDDD;'): tr
