메인페이지 리뉴얼 작업

--- a/Server/lib/Web/views/m_kkutu.pug
+++ b/Server/lib/Web/views/m_kkutu.pug
@@ -602,7 +602,7 @@ block Middle
 		div.game-input
 			input#game-input(placeholder=L('yourTurn')+' '+L('inputHere'))
 	+Product('P4jrKHDWS3x3')
-		div#aBzxRsN4KgtR
+		div#mMpCfecQSHSD
 		input#tPDaArKj3B8Y(maxlength=200, placeholder=L('chatHotkey'), autocomplete="off")
 		button#aBzxRsN4KgtR
 			+FA('paper-plane')
