--- a/Front/src/routes/styles.css
+++ b/Front/src/routes/styles.css
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: fadeIn 1s forwards;
+    animation: imgFadeIn 1s forwards;
     transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
     opacity: 0;
     z-index: -999;
@@ -39,6 +39,26 @@
 
   .gb{
     z-index: -999;
+  }
+
+  .moremi-hero{
+    animation: fadeInRight 1s forwards;
+    transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
+  }
+
+  /* Desktop */
+  @media (min-width: 1024px) {
+    .text-hero{
+      animation: fadeIn 1s forwards;
+      transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
+    }
+  }
+  /* Mobile */
+  @media (max-width: 1024px) {
+    .text-hero{
+      animation: fadeInTop 1s forwards;
+      transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
+    }
   }
 
   .layer img {
@@ -49,11 +69,46 @@
   @keyframes fadeIn {
     from {
       opacity: 0;
-	  transform: translateY(-50px);
+	  transform: translateX(-50px);
     }
     to {
       opacity: 1;
-	  transform: translateY(0px);
+	  transform: translateX(0px);
+    }
+  }
+
+  @keyframes imgFadeIn {
+    from {
+      opacity: 0;
+	  transform: translateX(-50px);
+    }
+    to {
+      opacity: 0.5;
+	  transform: translateX(0px);
+    }
+  }
+
+  @keyframes fadeInTop {
+    from {
+      opacity: 0;
+      transform: translateY(-5px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+
+  @keyframes fadeInRight {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+      filter: brightness(0);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0px);
+      filter: brightness(1) drop-shadow(0px -36px 36px #a955f762);
     }
   }
 
@@ -63,11 +118,11 @@
   }
 
   .bg-layer3 {
-    animation-delay: 1s;
+    animation-delay: 0.5s;
   }
 
   .bg-layer4 {
-    animation-delay: 2s;
+    animation-delay: 1s;
   }
 
 .modal {
@@ -115,4 +170,49 @@
 }
 .boardBg-22{
 	@apply bg-red-500;
+}
+
+.balloon-tail {
+  position: absolute;
+  bottom: -10px; /* Adjust this value to control tail position */
+  left: 50%;
+  margin-left: -10px; /* Half of the tail width */
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black; /* Tail color */
+}
+
+.conn-balloon{
+  animation: fadeInTop 1s forwards;
+  transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
+}
+
+.modal-front{
+  animation: zoomIn 0.3s forwards;
+  transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
+}
+
+.modal-back{
+  animation: zoomOut 0.3s forwards;
+  transition-timing-function: cubic-bezier(0.49, 0.09, 0.39, 1);
+}
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes zoomOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
